2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Improved paste behaviors.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to render white spaces as &nbsp;.

2007-06-22  Satoshi Nakagawa <artension@gmail.com>

	Changed to force single line on the inputting edit.
	Fixed a bug, cannot use paste menu on log views.

2007-06-21  Satoshi Nakagawa <artension@gmail.com>

	Added dislike words.
	Supported character attributes of mIRC.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed whois dialogs and DCC file transfer items to follow nick changes.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to print DCC file transfer messages.
	Changed to disable DCC file sending when my address is nil.
	Refactoring.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to use keyword settings.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Changed to use DCC port range.
	Implemented address detection.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Added ib_mapped_int_outlet.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Supported loading float values in user defaults.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Added preferences dialog.

2007-06-20  Satoshi Nakagawa <artension@gmail.com>

	Refactoring.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Added facility of preference auto loading and saving.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Unified cells into one class on the DCC dialog.
	Reformed preference loading and saving.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, cannot paste on dialogs.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Fixed locked Image deallocation bug.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Added clear button on DCC dialog.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Added DCC file sending.

2007-06-19  Satoshi Nakagawa <artension@gmail.com>

	Changed licensing terms.
